--- a/css/index.css
+++ b/css/index.css
@@ -1,58 +1,102 @@
-    body{background-color: lightblue;}
-    h1{color: rgb(25, 74, 24);}
-    p{color: rgb(84, 74, 5); font-size: large;}
-    .firstClass{font-style: italic;}
-    .secondClass{font-style: oblique;}
-    #list2{font-size: large;} 
-
-    .flex_container{
-        display: flex;
-        background-color:lightgray;
-        justify-content: space-around;
+    body{
+        min-width: 450px;
+        background-color: rgb(60,60,60);
     }
-    .flex_item{
-        background-color:aliceblue;
-    }
-    .imgFloatRight{
-        float: right;
-    }
-    
-    .flexparent{
-        display: flex;
-        justify-content: center;
-    }
-    
-    .flexchild{
-        flex: 1;
-        border: 1px;
-        border-color: white;
-        background-color:green;
+    h1{
+        color: rgb(255, 255, 255);
+        display:block;
         text-align: center;
     }
-    
-    .copyright{
-        flex: 4;
-        border: 1px;
-        border-color: white;
-        background-color:green;
-        text-align: center;
-    }
-    
-    
-    a:link{
-        text-decoration:underline;
-        color:white;
-    }
-    
-    a:hover{
+    h2{
+        color: rgb(255, 255, 255);
         text-decoration: underline;
-        color:black;
+    }
+    p{color: rgb(255, 255, 255); font-size: large;}
+    a{font-size: large;}
+
+    .barparent{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    } 
     
+    .barchild{
+        flex: 1;
+        border: 0.1em;
+        border-style: solid;
+        border-color: rgb(22, 22, 22);
+        background-color:rgb(190, 158, 242);
+        text-align: center;
+        color:black;
+        cursor: help;        
     }
 
-@media screen and (max-width:900px) {
-    .images{
-        width:200px;
-        height:200px;
+    .barchild a, .barchild p{
+        color:black;
+        text-decoration: none;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        display: block;
+        cursor: help;
     }
-}
+
+    .barchild :hover{
+        background-size: auto;
+        background-color:rgb(224, 211, 245);
+        text-decoration: underline;
+    }
+
+    .content{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;  
+    }
+
+    .sidebarframe{
+        min-width: 300px;
+        max-width:  350px;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-top: 3em;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .sidebar{
+        border: 5px;
+        border-style: solid;
+        border-color: rgb(22, 22, 22);
+
+    }
+
+    .sidebar img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1em;
+        margin-bottom: 0.5em;
+    }
+
+    .main{
+        display: flex;
+        flex-direction: column;
+        flex: 1 0.5 2;
+    }
+
+    .entries{
+        flex: none;
+    }
+
+    .pagenav{
+        flex: none;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        max-height:100px;
+        display: block;
+        text-align: center;
+    }
+
+    .pagenav p, .pagenav button{
+        display:inline;
+    }
+
