--- a/css/short.css
+++ b/css/short.css
@@ -1,52 +1,52 @@
-body{background-color: lightblue;}
-h1{color: rgb(25, 74, 24);}
-p{color: rgb(84, 74, 5); font-size: large;}
-.firstClass{font-style: italic;}
-.secondClass{font-style: oblique;}
-#list2{font-size: large;} 
-
-.flex_container{
-    display: flex;
-    background-color:lightgray;
-    justify-content: space-around;
-}
-.flex_item{
-    background-color:aliceblue;
-}
-.imgFloatRight{
-    float: right;
-}
-
-.flexparent{
-    display: flex;
-    justify-content: center;
+.content{
+    display:flex;
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
-.flexchild{
-    flex: 1;
-    border: 1px;
-    border-color: white;
-    background-color:green;
-    text-align: center;
+.sidebarframe{
+    min-width: 450px;
+    max-width:  none;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-top: 1em;
+    display: flex;
+    flex-direction: row;
 }
 
-.copyright{
-    flex: 4;
-    border: 1px;
-    border-color: white;
-    background-color:green;
-    text-align: center;
+.sidebar{
+    border: 5px;
+    border-style: solid;
+    border-color: rgb(22, 22, 22);
+    display: flex;
+    flex-direction: row;
+}
+
+.sidebar img{
+    display: inline;
+    margin: 1em;
+    width: 200px;
+    height: 200px;
+}
+
+.sidebar p{
+    display: inline;
+}
+
+.sbp{
+    margin: 1em;
+}
+
+.main{
+    display: flex;
+    flex-direction: column-reverse;
+    flex: 1 0.5 2;
 }
 
 
-a:link{
-    text-decoration:underline;
-    color:white;
+@media screen and (max-width:900px) {
+.images{
+    width:250px;
+    height:250px;
 }
-
-a:hover{
-    text-decoration: underline;
-    color:black;
-
 }
